Configure correct type of manifest

--- a/.tekton/storage-broker-pull-request.yaml
+++ b/.tekton/storage-broker-pull-request.yaml
@@ -29,6 +29,8 @@ spec:
     value: 5d
   - name: dockerfile
     value: Dockerfile
+  - name: buildah-format
+    value: oci
   pipelineRef:
     name: docker-build-oci-ta
   taskRunTemplate:
